Updated and command line